fix product cards on mobile

--- a/src/scss/components/_product_card.scss
+++ b/src/scss/components/_product_card.scss
@@ -88,7 +88,7 @@ $product-card-ribbon-z-index: 4;
       vertical-align: middle;
       display: inline-block;
       width: auto;
-      max-height: 100%;
+      max-height: 276px;
     }
 
   }
@@ -158,6 +158,13 @@ $product-card-ribbon-z-index: 4;
 
   /*================ Desktop Version ================*/
   @include at-query($min, $large) {
+
+    .product-card__image {
+      img{
+        max-height: 100%;
+      }
+    }
+
     .product-form {
       height: 52px;
     }
@@ -197,22 +204,22 @@ $product-card-ribbon-z-index: 4;
         }
       }
     }
+  }
 
-    &.second-img--hover{
+  &.second-img--hover{
+    .product-card__image > .reveal > img:last-child{
+      display: none;
+    }
+    &:hover{
       .product-card__image > .reveal > img:last-child{
-        display: none;
+        display: block;
+        vertical-align: middle;
+        display: inline-block;
+        width: auto;
+        max-height: 100%;
       }
-      &:hover{
-        .product-card__image > .reveal > img:last-child{
-          display: block;
-          vertical-align: middle;
-          display: inline-block;
-          width: auto;
-          max-height: 100%;
-        }
-        .product-card__image > .reveal > img:first-child{
-          display: none;
-        }
+      .product-card__image > .reveal > img:first-child{
+        display: none;
       }
     }
   }
